--- a/app/views/feeds/_reposting_display.html.erb
+++ b/app/views/feeds/_reposting_display.html.erb
@@ -1,4 +1,5 @@
 <%# locals: (feed:) %>
+<div id="reposting-display">
 <dl class="row mb-0">
   <dt class="col-sm-3">Access Token</dt>
   <dd class="col-sm-9">
@@ -23,3 +24,4 @@
     <% end %>
   </dd>
 </dl>
+</div>
