--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -1,4 +1,5 @@
 <%# locals: (feed:) %>
+<div id="reposting-display">
 <div data-controller="groups"
      data-groups-loading-text-value="Loading..."
      data-groups-default-text-value="Select the Freefeed group where posts will be published">
@@ -55,4 +56,5 @@
         data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
 <% end %>
+</div>
 </div>
