--- a/app/views/feeds/_scheduling_display.html.erb
+++ b/app/views/feeds/_scheduling_display.html.erb
@@ -1,4 +1,5 @@
 <%# locals: (feed:) %>
+<div id="scheduling-display">
 <dl class="row mb-0">
   <dt class="col-sm-3">Schedule</dt>
   <dd class="col-sm-9">
@@ -28,4 +29,5 @@
     </dd>
   <% end %>
 </dl>
+</div>
 
