--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -1,4 +1,5 @@
 <%# locals: (feed:) %>
+<div id="scheduling-display">
 <%= form_with model: feed, local: true, class: "needs-validation", novalidate: true do |form| %>
   <% if feed.errors.any? %>
     <div class="alert alert-danger">
@@ -40,3 +41,4 @@
         data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
 <% end %>
+</div>
