--- a/app/views/feeds/_content_source_display.html.erb
+++ b/app/views/feeds/_content_source_display.html.erb
@@ -1,4 +1,5 @@
 <%# locals: (feed:) %>
+<div id="content-source-display">
 <dl class="row mb-0">
   <dt class="col-sm-3">Feed URL</dt>
   <dd class="col-sm-9">
@@ -20,3 +21,4 @@
     <% end %>
   </dd>
 </dl>
+</div>
