--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -36,7 +36,7 @@
 
 
   <div class="d-flex gap-2">
-    <%= form.submit "Save Schedule", class: "btn btn-primary" %>
+    <%= form.submit "Save", class: "btn btn-primary" %>
     <%= link_to "Cancel", feed_path(feed, section: "scheduling", format: :turbo_stream),
         class: "btn btn-outline-secondary",
         data: { turbo_prefetch: false, turbo_stream: true } %>
