Improve UI: simplify Save buttons, enhance icons, add error handling

--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -62,7 +62,7 @@ Source
         class: "text-primary text-decoration-none",
         data: { turbo_prefetch: false, turbo_stream: true },
         title: "Edit" do %>
-      <i class="bi bi-pencil"></i>
+      <i class="bi bi-pencil text-secondary"></i>
     <% end %>
   </div>
   <div class="card-body">
@@ -85,7 +85,7 @@ Reposting Target
         class: "text-primary text-decoration-none",
         data: { turbo_prefetch: false, turbo_stream: true },
         title: "Edit" do %>
-      <i class="bi bi-pencil"></i>
+      <i class="bi bi-pencil text-secondary"></i>
     <% end %>
   </div>
   <div class="card-body">
@@ -108,7 +108,7 @@ Schedule
         class: "text-primary text-decoration-none",
         data: { turbo_prefetch: false, turbo_stream: true },
         title: "Edit" do %>
-      <i class="bi bi-pencil"></i>
+      <i class="bi bi-pencil text-secondary"></i>
     <% end %>
   </div>
   <div class="card-body">
