--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (feed:) %>
-<div id="reposting-display">
+<div class="list-group-item" id="reposting-display">
 <div data-controller="groups"
      data-groups-loading-text-value="Loading..."
      data-groups-default-text-value="Select the Freefeed group where posts will be published">
