--- a/app/views/feeds/_content_source_form.html.erb
+++ b/app/views/feeds/_content_source_form.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (feed:) %>
-<div id="content-source-display">
+<div class="list-group-item" id="content-source-display">
 <%= form_with model: feed, class: "needs-validation", novalidate: true do |form| %>
   <%= hidden_field_tag :section, "content_source" %>
   <% if feed.errors.any? %>
