--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1><%= @feed.name %></h1>
+  <h1 id="feed-title"><%= @feed.name %></h1>
   <div class="d-flex gap-2 align-items-center">
     <% if @feed.enabled? %>
       <div class="d-flex align-items-center me-2">
@@ -49,14 +49,22 @@
 
 <div class="list-group">
   <div class="list-group-item" id="content-source-display">
-    <%= render "content_source_display", feed: @feed %>
+    <div id="content-source-content">
+      <%= render "content_source_display", feed: @feed %>
+    </div>
   </div>
 
   <div class="list-group-item" id="reposting-display">
-    <%= render "reposting_display", feed: @feed %>
+    <div id="reposting-content">
+      <%= render "reposting_display", feed: @feed %>
+    </div>
   </div>
 
   <div class="list-group-item" id="scheduling-display">
-    <%= render "scheduling_display", feed: @feed %>
+    <div id="scheduling-content">
+      <%= render "scheduling_display", feed: @feed %>
+    </div>
   </div>
 </div>
+
+<div id="edit-form-container"></div>
