--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -20,7 +20,7 @@
           method: :patch,
           params: { status: "enabled" },
           class: "btn btn-success" %>
-    <% elsif @feed.inactive? %>
+    <% elsif @feed.disabled? && !@feed.can_be_enabled? %>
       <div class="d-flex align-items-center me-2">
         <i class="bi bi-gear-fill text-secondary me-1"></i>
         <span class="text-secondary fw-medium">Configuration Needed</span>
