--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -29,7 +29,7 @@
         { prompt: "Choose schedule..." },
         { class: "form-select", required: true } %>
     <div class="form-text">Select how often the feed should be refreshed</div>
-    <div class="invalid-feedback">Please select a schedule.</div>
+    <div class="invalid-feedback">Select a schedule.</div>
   </div>
 
   <div class="mb-3">
