--- a/app/views/settings/access_token_groups/_error.html.erb
+++ b/app/views/settings/access_token_groups/_error.html.erb
@@ -3,5 +3,5 @@
     <option value="">Error loading groups</option>
   </select>
   <div class="form-text text-danger">Failed to load groups: <%= error %></div>
-  <div class="invalid-feedback">Please select a target group.</div>
+  <div class="invalid-feedback">Select a target group.</div>
 </div>
