--- a/app/views/settings/access_token_groups/index.turbo_stream.erb
+++ b/app/views/settings/access_token_groups/index.turbo_stream.erb
@@ -14,6 +14,6 @@
     <div class="form-text" data-groups-target="helpText">
       Select the Freefeed group where posts will be published
     </div>
-    <div class="invalid-feedback">Please select a target group.</div>
+    <div class="invalid-feedback">Select a target group.</div>
   </div>
 <% end %>
