--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -4,18 +4,18 @@
   <h1>Event #<%= @event.id %></h1>
   <div class="d-flex gap-2">
     <% if @previous_event %>
-      <%= link_to "← Previous", event_path(@previous_event), class: "btn btn-outline-secondary" %>
+      <%= link_to "← Previous", admin_event_path(@previous_event), class: "btn btn-outline-secondary" %>
     <% else %>
       <span class="btn btn-outline-secondary disabled">← Previous</span>
     <% end %>
     
     <% if @next_event %>
-      <%= link_to "Next →", event_path(@next_event), class: "btn btn-outline-secondary" %>
+      <%= link_to "Next →", admin_event_path(@next_event), class: "btn btn-outline-secondary" %>
     <% else %>
       <span class="btn btn-outline-secondary disabled">Next →</span>
     <% end %>
     
-    <%= link_to "Back to Events", events_path, class: "btn btn-outline-primary" %>
+    <%= link_to "Back to Events", admin_events_path, class: "btn btn-outline-primary" %>
   </div>
 </div>
 
